2005-10-01 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* rip_zebra.c: (config_write_rip_redistribute): Remove local hard-coded
	  table str[]. Replace str[] with calls to new library function
	  zebra_route_string().
	* ripd.c: Remove local hard-coded table route_info[].
	  (show_ip_rip) Replace uses of str[] with calls to new library
	  functions zebra_route_char and zebra_route_string.

2005-09-29 Alain Ritoux <alain.ritoux@6wind.com>

	* rip_snmp.c: rip2IfConfReceive() sends values in conformance
	  with RFC. Also PeerDomain is now set to a STRING type.
	* ripd.h: rip_redistribute_add() API includes metric and distance
	  added field external_metric in routes.
	* ripd.c: rip_redistribute_add() API i.e. stores metric and distance
      Now allows a RIP-route to overcome a redistributed route coming
	  from a protocol with worse (higher) administrative distance
	  Metrics from redistribution are shown in show ip rip
	* rip_zebra.c: adapt to the rip_redistribute_add() API, i.e.
	  provide distance and metric
	* rip_interface.c: adapt to the rip_redistribute_add() API
	* rip_routemap.c: no RMAP_COMPILE_ERROR on (metric > 16) usage
	  rather a CMD_WARNING, because set metric ius shared with other
	  protocols using larger values (such as OSPF)
	  The match metric action takes first external metric if present
      (from redistribution) then RIP metric.

2005-09-28 Alain Ritoux <alain.ritoux@6wind.com>

	* ripd.c: use new md5 API

2005-08-16 Paul Jakma <paul.jakma@sun.com>

	* ripd.c: (general) Fix previous commit, broke multicast bind and
	  hence setting of source port, which broke communication with
	  non-borken ripd. Fix removes more stuff from rip_interface.c
	  than it adds to ripd.c ;)
	  (rip_create_socket) the to argument really is a from argument,
	  rename it. Set the source port to RIP port unconditionally, it's
	  required.
	  (rip_send_packet) Set from address correctly for multicast.