@@ -1,3 +1,9 @@
+2005-10-06 Alain Ritoux <alain.ritoux@6wind.com>
+
+	* rip_interface.c: Now the command "no ip rip split-horizon
+	  poisoned-reverse" just inhibates the poisoned-reverse effects
+	  but keep spli-horizon activ.
+
 2005-10-01 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* rip_zebra.c: (config_write_rip_redistribute): Remove local hard-coded
